@@ -5,6 +5,14 @@
 	li {padding-bottom: 3px;}
 	</style><div style="font-family: Verdana; font-size: 12px;"><h1>Segue ChangeLog</h1><h2>Version 1.3.2</h2><h3>2004-10-07</h3><ul>
 		<li/> Bug Fix:
+	 
+			Replaced preview links in permissions window with a link to the new preview screen.
+		 (<i>Adam Franco</i>)
+		<li/> Bug Fix:
+	 
+			'Build permissions array' now doesn't confuse delete and discuss permissions.
+		 (<i>Adam Franco</i>)
+		<li/> Bug Fix:
 	<a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1042319&amp;group_id=82171&amp;atid=565234">
         			#1042319</a> 
 			Classes with the external ID different from the internal code now are
