@@ -2,6 +2,12 @@
 
 <changelog name="Segue ChangeLog">
 	<version number="1.3.2" date="2004-10-07">
+		<fix author='adam'>
+			Replaced preview links in permissions window with a link to the new preview screen.
+		</fix>
+		<fix author='adam'>
+			'Build permissions array' now doesn't confuse delete and discuss permissions.
+		</fix>
 		<fix author='adam' ref='1042319' reftype='bug'>
 			Classes with the external ID different from the internal code now are
 			pulled properly in the roster.
