@@ -11,7 +11,7 @@ print "<input type=hidden name=site value='".$_SESSION[obj]->getField("name")."'
 
 print "<table cellspacing=1 width='100%'>";
 print "<tr>";
-print "<th colspan=4>Editors";
+print "<th colspan=3>Editors";
 
 print "<div align='right' style='padding: 5px;'>";
 print "<input type=button value='".(($isOwner)?"Cancel":"Close")."' onClick='document.location=\"edit_permissions.php?cancel=1\"'>";
@@ -28,7 +28,7 @@ print "</tr>";
  * add editor button
  ******************************************************************************/
 $buttons = "<tr>";
-$buttons .= "<th align='left' colspan=3>";
+$buttons .= "<th align='left' colspan=2>";
 $buttons .= "<input type=button name='checkall' value='Check All' onClick='checkAll()'> ";
 $buttons .= "<input type=button name='uncheckall' value='Uncheck All' onClick='uncheckAll()'> ";
 $buttons .= "<input type=button name='add' value='Add Editor' onClick=\"sendWindow('addeditor',400,250,'add_editor.php?$sid')\">";
@@ -47,7 +47,6 @@ print $buttons;
 <th>edit</th>
 <th>name</th>
 <th> &nbsp; </th>
-<th>preview saved permissions</th>
 </tr>
 <?
 
@@ -73,16 +72,10 @@ if ($edlist = $_SESSION[obj]->getEditors()) {
 		else print "<a href='#' onClick='delEditor(\"$e\");'>remove</a>";
 		print "</td>";
 		
-		// Preview links
-		print "<td class=td$color align='center'>";
-		print "<a href='#' onClick=\"sendWindow('sitepreview',800,600,'index.php?$sid&action=preview_as&previewuser=$e&site=".$_SESSION[obj]->getField("name")."')\">";
-		print "preview as '$e'</a>";
-		print "</td>";
-		
 		print "</tr>";
 		$color = 1-$color;
 	}
-} else  print "<tr><td class=td1 > &nbsp; </td><td class=td1 colspan=4>no editors added</td></tr>";
+} else  print "<tr><td class=td1 > &nbsp; </td><td class=td1 colspan=2>no editors added</td></tr>";
 
 /******************************************************************************
  * Buttons:
@@ -90,9 +83,12 @@ if ($edlist = $_SESSION[obj]->getEditors()) {
  ******************************************************************************/
 print $buttons;
 
-print "<th align='center' colspan=4 style='text-size: 25; font-weight: bold'>";
+print "<th align='center' colspan=3 style='text-size: 25; font-weight: bold'>";
 
 print "<div align='right' style='padding: 5px;'>";
+if ($isOwner) {
+	print "\n\t<input type=button style='width: $btnw' class='button' name='preview_as' value=' &nbsp; Preview Saved Permissions As... &nbsp;' onClick='sendWindow(\"preview_as\",400,300,\"preview.php?$sid&site=$site&query=".urlencode("&action=site&site=".$site)."\")' target='preview_as' style='text-decoration: none'> ";
+}
 print "<input type=button value='".(($isOwner)?"Cancel":"Close")."' onClick='document.location=\"edit_permissions.php?cancel=1\"'>";
 if ($isOwner) print "\n<input type=button name='savepermissions' value='Save All Changes' onClick='document.location=\"edit_permissions.php?savechanges=1\"'>";
 print "</div>";
